--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ffdfb840</color>
+    <color name="colorPrimaryDark">#ffd4a515</color>
+    <color name="colorAccent">#ff962326</color>
+    <color name="window_background">?android:attr/colorBackground</color>
 </resources>
