--- a/app/src/main/res/drawable/background_rounded.xml
+++ b/app/src/main/res/drawable/background_rounded.xml
@@ -1,9 +1,13 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#00ffffff" />
-    <padding android:left="@dimen/offset_item"
-        android:top="@dimen/offset_item"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#00ffffff"/>
+    <padding
+        android:bottom="@dimen/offset_item"
+        android:left="@dimen/offset_item"
         android:right="@dimen/offset_item"
-        android:bottom="@dimen/offset_item" />
-    <corners android:radius="@dimen/offset_item" />
-    <stroke android:width="@dimen/offset_item" android:color="@android:color/white" />
+        android:top="@dimen/offset_item"/>
+    <corners android:radius="@dimen/offset_item"/>
+    <stroke
+        android:width="@dimen/offset_item"
+        android:color="@android:color/white"/>
 </shape>
