--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,78 +32,110 @@
                 layout="@layout/item_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_avatar_portrait"
-                android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
                 />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvContent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
+            <LinearLayout
+                android:id="@+id/layoutAchievementWellmark"
+                style="@style/AchievementStyle.Layout"
                 android:layout_below="@id/layoutAvatar"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:layout_marginTop="@dimen/offset_item"
-                android:layout_marginStart="@dimen/margin_start"
-                android:layout_marginEnd="@dimen/standard_margin"
-                tools:itemCount="2"
-                tools:listitem="@layout/item_achievement"
+                android:orientation="horizontal"
+                >
+
+                <ImageView
+                    android:id="@+id/ivAchievementWellmarkIcon"
+                    style="@style/AchievementStyle.Icon"
+                    android:background="@drawable/logo_work_cropped"
+                    android:contentDescription="@string/content_description_wellmark_group"
+                    />
+
+                <TextView
+                    android:id="@+id/tvAchievementWellmarkName"
+                    style="@style/AchievementStyle.Text"
+                    android:text="@string/wellmark_group"
+                    />
+
+            </LinearLayout>
+
+            <include
+                android:id="@+id/vDivider1"
+                style="@style/DividerStyle"
+                layout="@layout/divider"
+                android:layout_below="@id/layoutAchievementWellmark"
+                tools:ignore="IncludeLayoutParam"
+                />
+
+            <TextView
+                android:id="@+id/tvAbout"
+                style="@style/AboutStyle"
+                android:layout_below="@id/vDivider1"
+                android:text="@string/about_me"
+                />
+
+
+            <include
+                android:id="@+id/vDivider2"
+                style="@style/DividerStyle"
+                layout="@layout/divider"
+                android:layout_below="@id/tvAbout"
+                tools:ignore="IncludeLayoutParam"
                 />
 
             <EditText
                 android:id="@+id/etMessage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/rvContent"
-                android:layout_marginStart="@dimen/margin_start"
+                style="@style/SendMessageStyle.TextInput"
+                android:layout_below="@id/vDivider2"
                 android:layout_toStartOf="@id/ivSendMessage"
-                android:hint="@string/enter_message_hint"
-                android:imeOptions="actionSend|flagNoExtractUi"
-                android:inputType="text"
-                android:maxLines="1"
+                android:importantForAutofill="no"
+                tools:targetApi="o"
                 />
 
             <ImageView
                 android:id="@+id/ivSendMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/SendMessageStyle.IconSend"
                 android:layout_alignBaseline="@id/etMessage"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="@dimen/standard_margin"
                 android:baselineAlignBottom="true"
-                android:tint="@color/colorAccent"
-                app:srcCompat="@drawable/ic_send_black_24dp"
                 android:contentDescription="@string/content_description_send_message"
+                app:srcCompat="@drawable/ic_send_black_24dp"
                 />
 
-
-            <RelativeLayout
+            <LinearLayout
                 android:id="@+id/layoutContacts"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
+                style="@style/ContactStyle.Layout"
                 android:layout_below="@id/etMessage"
-                android:layout_marginBottom="@dimen/standard_margin"
-                android:layout_marginEnd="@dimen/standard_margin"
-                android:layout_marginStart="@dimen/margin_start"
-                android:layout_marginTop="@dimen/standard_margin"
+                android:layout_centerHorizontal="true"
                 >
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rvContacts"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_gravity="center_horizontal"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/offset_item"
-                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                    tools:itemCount="3"
-                    tools:listitem="@layout/item_contact"
-                    />
-            </RelativeLayout>
+                <FrameLayout
+                    android:id="@+id/layoutContactTelegram"
+                    style="@style/ContactStyle.ItemLayout"
+                    >
+                    <ImageView
+                        android:id="@+id/ivContactTelegram"
+                        style="@style/ContactStyle.Icon"
+                        android:contentDescription="@string/content_description_telegram_link"
+                        app:srcCompat="@drawable/ic_telegram"
+                        />
+
+                    <include layout="@layout/background_item_contact"/>
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/layoutContactFacebook"
+                    style="@style/ContactStyle.ItemLayout"
+                    >
+                    <ImageView
+                        android:id="@+id/ivContactFacebook"
+                        style="@style/ContactStyle.Icon"
+                        android:contentDescription="@string/content_description_facebook_link"
+                        app:srcCompat="@drawable/ic_facebook"
+                        />
+
+                    <include layout="@layout/background_item_contact"/>
+                </FrameLayout>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
