--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -45,11 +45,12 @@
 
                 <include
                     android:id="@+id/itemAchievementWellmark"
+                    style="@style/AchievementStyle.Layout"
                     layout="@layout/item_achievement"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    style="@style/AchievementStyle.Layout"/>
+                    />
 
                 <include
                     android:id="@+id/vDivider1"
