--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -62,6 +62,7 @@
             android:layout_width="100dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
+            android:contentDescription="@string/content_description_image_for_news"
             app:layout_constraintBottom_toBottomOf="@+id/tvBody"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tvTitle"
