--- a/app/src/main/res/layout/item_news_big.xml
+++ b/app/src/main/res/layout/item_news_big.xml
@@ -19,6 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
+            android:contentDescription="@string/content_description_image_for_news"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
