Extract background color from item_news_big into color resources.

--- a/app/src/main/res/layout/item_news_big.xml
+++ b/app/src/main/res/layout/item_news_big.xml
@@ -45,7 +45,7 @@
             android:id="@+id/tvTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="#b4c6c5c5"
+            android:background="@color/background_transparent_grey"
             android:lines="2"
             android:paddingStart="@dimen/spacing_normal"
             android:paddingTop="@dimen/spacing_micro"
