--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#ffd4a515</color>
     <color name="colorAccent">#ff962326</color>
     <color name="window_background">?android:attr/colorBackground</color>
+    <color name="background_transparent_grey">#b4c6c5c5</color>
 </resources>
